# seaice-concentration

./: .gitignore  .gitmodules  README.md  trial_modules.sh
ecf/: abbrev.runup.sh  abbrevday.sh  day.sh  iceconc.runup.sh  jobcards  jseaice_analysis.ecf  jseaice_filter.ecf  jseaice_gempak.ecf  seaice_00.def  sms.abbrev  sms.fake  sms.filter.fake
gempak/fix/: ice_cover_grib2.tbl  nagrib.tbl  wmogrib2.tbl
gempak/ush/ice/: ice_edge_vgf.sh
jobs/: JICE_GEMPAK  JSEAICE_ANALYSIS  JSEAICE_FILTER  JSEAICE_GEMPAK  Jabbrev
modulefiles/: module_base.hera.lua
notes/: README.20161122  conc_implementation_notes.v4.2.0.odt  noted_for_cmake
scripts/: abbrev_analysis.sh  exice_nawips.sh  exice_nawips.sh.ecf  exseaice_analysis.sh  exseaice_analysis.sh.ecf  exseaice_filter  exseaice_filter.sh
sorc/: CMakeLists.txt  clean  hera.modules  makeall.mk  makeall.sh  seaice_analysis.modulefile  toexec  wcoss2.modules
sorc/algorithms/: algorithms.py
sorc/amsr2/: CMakeLists.txt  makeall.sh
sorc/amsr2.filter/: filtering.py  notes  statview.py  version4.py
sorc/amsr2/seaice_amsrbufr.fd/: CMakeLists.txt  amsr2.f90  makefile
sorc/amsr2/seaice_iceamsr2.Cd/: CMakeLists.txt  amsr2_team2.C  makefile  notbogus.py  scan.C  seaice_iceamsr2.C
sorc/avhrr/: CMakeLists.txt  makeall.sh
sorc/avhrr/seaice_avhrrbufr.fd/: CMakeLists.txt  gac_readavhrr.f90  gac_readsst.f90  makefile
sorc/avhrr/seaice_avhrrfilter.Cd/: CMakeLists.txt  makefile
sorc/filter/: filtering.py  makefile  version3.py  version3c.py
sorc/general/: CMakeLists.txt  makeall.sh
sorc/general/seaice_blend.Cd/: CMakeLists.txt  blend.C  makefile
sorc/general/seaice_edge.Cd/: CMakeLists.txt  makefile
sorc/general/seaice_filtanal.Cd/: CMakeLists.txt  makefile
sorc/general/seaice_grib2.fd/: CMakeLists.txt  makefile  seaice_grib2.f90
sorc/general/seaice_ice2grib.fd/: makefile  mkllglob.f90
sorc/general/seaice_icegrid.Cd/: CMakeLists.txt  fill.C  makefile
sorc/general/seaice_imsice.Cd/: CMakeLists.txt  makefile
sorc/general/seaice_monitor.Cd/: CMakeLists.txt  makefile
sorc/general/seaice_noice.Cd/: CMakeLists.txt  makefile  noice_gl.C
sorc/general/seaice_posteriori.Cd/: makefile
sorc/general/seaice_psgnorth.fd/: makefile  psgrib.f90
sorc/general/seaice_psgsouth.fd/: makefile  psgrib.f90
sorc/general/seaice_reduce.Cd/: makefile
sorc/general/seaice_regions.Cd/: CMakeLists.txt  makefile
sorc/general/seaice_xpm.Cd/: CMakeLists.txt  makefile
sorc/l1b_to_l2/: CMakeLists.txt  README  bufr.c  colocate.py  filter.c  getday_ssmi.sh  getday_ssmis.sh  makeall.sh  makefile  runup.sh  skel.c  ssmi.bufr.f  ssmi2.h  ssmi_algorithm.c  ssmi_bufr.c  ssmi_decode.f  ssmi_filter.c  ssmi_skel.c  ssmisu_algorithm.c  ssmisu_decode.f  ssmisu_decode.f90  version2.py
sorc/l2_to_l3/: CMakeLists.txt  makeall.sh  makefile  ssmi_tol3.C  ssmis_tol3.C  ssmisu_tol3.C
sorc/l3_back_l2/: makefile
sorc/modulefiles/: 4.5.0.lua
sorc/modulefiles/seaice_analysis/: 4.4.0  4.5.0  4.5.0.lua  4.6.0  4.6.0.lua
sorc/ssmi/: makeall.sh
sorc/ssmi/seaice_seaissmi.cd/: makefile
sorc/ssmi/seaice_ssmibufr.fd/: binary.c  bufr_totext.f  makefile  ssmi.bufr.f
sorc/ssmis/: CMakeLists.txt  README  makeall.sh
sorc/ssmis/seaice_seaissmisu.cd/: CMakeLists.txt  makefile
sorc/ssmis/seaice_ssmisubufr.fd/: CMakeLists.txt  makefile  ssmisu_decode.f  ssmisu_decode.f90
tests/: detect_machine.sh
ush/: README  TROUBLES  compile.sh  ice_edge_vgf.sh  imsice.sh  load_modules.sh  noice.sh
versions/: build.hera.ver  build.hercules.ver  build.orion.ver  build.ver  run.ver  seaice_analysis.ver
